Added photo, footer, and page linking feature

--- a/Pages/contact_me.html
+++ b/Pages/contact_me.html
@@ -20,8 +20,8 @@
       <nav class="navigationbar">
         <a class="tabs" href="#resume">Resume</a>
         <a class="tabs" href="#">Contact Me</a>
-        <a class="tabs" href="#work">Work</a>
-        <a class="tabs" href="#aboutme">About Me</a>
+        <a class="tabs" href="../Index.html#work">Work</a>
+        <a class="tabs" href="../Index.html#about_me">About Me</a>
         <a class="tabs" href="./sign_in.html">Sign In</a>
       </nav>
     </header>
