--- a/Pages/sign_in.html
+++ b/Pages/sign_in.html
@@ -20,8 +20,8 @@
       <nav class="navigationbar">
         <a class="tabs" href="#resume">Resume</a>
         <a class="tabs" href="./contact_me.html">Contact Me</a>
-        <a class="tabs" href="#work">Work</a>
-        <a class="tabs" href="#aboutme">About Me</a>
+        <a class="tabs" href="../Index.html#work">Work</a>
+        <a class="tabs" href="../Index.html#about_me">About Me</a>
         <a class="tabs" href="#">Sign In</a>
       </nav>
     </header>
