--- a/Index.html
+++ b/Index.html
@@ -35,64 +35,66 @@
         </div>
       </section>
     </div>
+
     <main>
       <aside>
         <h3>Aside</h3>
       </aside>
-
-      <section id="about_me">
-        <h2>About Me</h2>
-        <div class="gallery">
-          <img
-            class="gallery__image"
-            src="https://place-puppy.com/100x100"
-            alt=""
-          />
-          <img
-            class="gallery__image"
-            src="https://place-puppy.com/100x100"
-            alt=""
-          />
-          <img
-            class="gallery__image"
-            src="https://place-puppy.com/100x100"
-            alt=""
-          />
-          <img
-            class="gallery__image"
-            src="https://place-puppy.com/100x100"
-            alt=""
-          />
-          <img
-            class="gallery__image"
-            src="https://place-puppy.com/100x100"
-            alt=""
-          />
-          <img
-            class="gallery__image"
-            src="https://place-puppy.com/100x100"
-            alt=""
-          />
-          <img
-            class="gallery__image"
-            src="https://place-puppy.com/100x100"
-            alt=""
-          />
-          <img
-            class="gallery__image"
-            src="https://place-puppy.com/100x100"
-            alt=""
-          />
-          <img
-            class="gallery__image"
-            src="https://place-puppy.com/100x100"
-            alt=""
-          />
-        </div>
-      </section>
-      <section id="work">
-        <h2>Work</h2>
-      </section>
+      <div class="div__main">
+        <section id="about_me">
+          <h2>About Me</h2>
+        </section>
+        <section id="work">
+          <h2>Work</h2>
+          <div class="gallery">
+            <img
+              class="gallery__image"
+              src="https://place-puppy.com/100x100"
+              alt=""
+            />
+            <img
+              class="gallery__image"
+              src="https://place-puppy.com/100x100"
+              alt=""
+            />
+            <img
+              class="gallery__image"
+              src="https://place-puppy.com/100x100"
+              alt=""
+            />
+            <img
+              class="gallery__image"
+              src="https://place-puppy.com/100x100"
+              alt=""
+            />
+            <img
+              class="gallery__image"
+              src="https://place-puppy.com/100x100"
+              alt=""
+            />
+            <img
+              class="gallery__image"
+              src="https://place-puppy.com/100x100"
+              alt=""
+            />
+            <img
+              class="gallery__image"
+              src="https://place-puppy.com/100x100"
+              alt=""
+            />
+            <img
+              class="gallery__image"
+              src="https://place-puppy.com/100x100"
+              alt=""
+            />
+            <img
+              class="gallery__image"
+              src="https://place-puppy.com/100x100"
+              alt=""
+            />
+          </div>
+        </section>
+      </div>
     </main>
     <footer>
       <h3>ARIEL SCHWARTZ</h3>
