Added quotes feature to aside.

--- a/Index.html
+++ b/Index.html
@@ -37,11 +37,52 @@
 
     <main>
       <aside>
-        <h3>Aside</h3>
+        <div id="ct">
+          <div class="corner" id="left_top"></div>
+          <div class="corner" id="left_bottom"></div>
+          <div class="corner" id="right_top"></div>
+          <div class="corner" id="right_bottom"></div>
+          <span>Winston Churchill</span>
+          <p>
+            <i
+              >&ldquo;Success consists of going from failure to failure without
+              loss of enthusiasm.&rdquo;
+            </i>
+          </p>
+        </div>
+
+        <div id="ct">
+          <div class="corner" id="left_top"></div>
+          <div class="corner" id="left_bottom"></div>
+          <div class="corner" id="right_top"></div>
+          <div class="corner" id="right_bottom"></div>
+          <span>C.S. Lewis</span>
+          <p>
+            <i
+              >&ldquo;Integrity is doing the right thing, even when no one is
+              watching.&rdquo;
+            </i>
+          </p>
+        </div>
       </aside>
+
       <div class="div__main">
         <section id="about_me">
           <h2>About Me</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque
+            aut blanditiis libero laborum quibusdam temporibus rem ut tempora
+            sed suscipit ipsum cum pariatur dolor est, laboriosam molestiae,
+            cumque recusandae molestias quo voluptates. Vitae quisquam quae
+            animi beatae necessitatibus, nostrum, possimus mollitia tempora
+            dolorem saepe, harum ut. Quos dicta doloribus quas commodi porro,
+            expedita in amet temporibus rerum nostrum, praesentium veniam at!
+            Molestiae voluptas natus itaque nesciunt iure molestias distinctio
+            iste dicta quas pariatur nemo quo officiis, ipsa dolore eligendi
+            illo ipsum! Blanditiis temporibus harum quod, quia magni culpa,
+            eaque eveniet nam porro aliquam ut perferendis? Dolorem praesentium
+            voluptatibus vitae porro?
+          </p>
         </section>
         <section id="work">
           <h2>Work</h2>
