Correct format and refactor (rename classes to BEM convention)

--- a/Index.html
+++ b/Index.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="./Styles/Index.css" />
   </head>
   <body>
-    <header>
+    <header class="navigationbar">
       <a href="./Index.html"
         ><img class="logo" src="./Images/Logo.JPG" alt=""
       /></a>
-      <nav class="navigationbar">
+      <nav class="navigationbar__a">
         <a class="tabs" href="#resume">Resume</a>
         <a class="tabs" href="./Pages/contact_me.html">Contact Me</a>
         <a class="tabs" href="#work">Work</a>
@@ -25,10 +25,10 @@
       </nav>
     </header>
 
-    <div class="wrapper">
-      <section class="hero-banner">
-        <img class="hero-photo" src="./Images/colombiatrip.jpg" alt="" />
-        <div class="hero-identity">
+    <div class="herowrapper">
+      <section class="hero">
+        <img class="hero__img" src="./Images/colombiatrip.jpg" alt="" />
+        <div class="hero__div">
           <h1>Ariel Schwartz</h1>
           <h2>Creative App Developer</h2>
         </div>
@@ -37,13 +37,13 @@
 
     <main>
       <aside>
-        <div id="ct">
+        <div class="quote quote--Winston">
           <div class="corner" id="left_top"></div>
           <div class="corner" id="left_bottom"></div>
           <div class="corner" id="right_top"></div>
           <div class="corner" id="right_bottom"></div>
-          <span>Winston Churchill</span>
-          <p>
+          <span class="quote__span">Winston Churchill</span>
+          <p class="quote__p">
             <i
               >&ldquo;Success consists of going from failure to failure without
               loss of enthusiasm.&rdquo;
@@ -51,13 +51,13 @@
           </p>
         </div>
 
-        <div id="ct">
+        <div class="quote quote--CS">
           <div class="corner" id="left_top"></div>
           <div class="corner" id="left_bottom"></div>
           <div class="corner" id="right_top"></div>
           <div class="corner" id="right_bottom"></div>
-          <span>C.S. Lewis</span>
-          <p>
+          <span class="quote__span">C.S. Lewis</span>
+          <p class="quote__p">
             <i
               >&ldquo;Integrity is doing the right thing, even when no one is
               watching.&rdquo;
@@ -66,22 +66,22 @@
         </div>
       </aside>
 
-      <div class="div__main">
+      <div class="main__div">
         <section id="about_me">
           <h2>About Me</h2>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque
-            aut blanditiis libero laborum quibusdam temporibus rem ut tempora
-            sed suscipit ipsum cum pariatur dolor est, laboriosam molestiae,
-            cumque recusandae molestias quo voluptates. Vitae quisquam quae
-            animi beatae necessitatibus, nostrum, possimus mollitia tempora
-            dolorem saepe, harum ut. Quos dicta doloribus quas commodi porro,
-            expedita in amet temporibus rerum nostrum, praesentium veniam at!
-            Molestiae voluptas natus itaque nesciunt iure molestias distinctio
-            iste dicta quas pariatur nemo quo officiis, ipsa dolore eligendi
-            illo ipsum! Blanditiis temporibus harum quod, quia magni culpa,
-            eaque eveniet nam porro aliquam ut perferendis? Dolorem praesentium
-            voluptatibus vitae porro?
+            I have a certification in Fullstack Development from the B.S. in
+            mechanical engineering from the University of Arizona (ABET) with a
+            minor in mathematics. At present I am employed with Raytheon
+            Technologies and have worked other roles as a Jr. Mechanical
+            Engineer for SMW Manufacturing and GRG America. Also, three
+            internships as a data collection engineer at Case New Holland,
+            consulting engineer at Hofstadter Analytical services, and Jr.
+            design engineer at Watts Water Technologies. I am also proud of my
+            3.6 GPA B.S. in Mechanical Engineering as well as 7 years of real
+            world experience. I have found demonstrating engineering rigor to be
+            rewarding and aim to challenge myself with technical industry
+            innovation. See Resume for details. Thanks for reading!
           </p>
         </section>
         <section id="work">
