Fixed a flexbox bug and added skills to aside

--- a/Index.html
+++ b/Index.html
@@ -14,10 +14,10 @@
   </head>
   <body>
     <header class="navigationbar">
-      <a href="./Index.html"
-        ><img class="logo" src="./Images/Logo.JPG" alt=""
+      <a class="navigationbar__logoa" href="./Index.html"
+        ><img class="navigationbar__img" src="./Images/Logo.JPG" alt=""
       /></a>
-      <nav class="navigationbar__a">
+      <nav class="navigationbar__nav">
         <a class="tabs" href="#resume">Resume</a>
         <a class="tabs" href="./Pages/contact_me.html">Contact Me</a>
         <a class="tabs" href="#work">Work</a>
@@ -64,12 +64,21 @@
             </i>
           </p>
         </div>
+        <div class="skills">
+          <h2>Languages</h2>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Javascript</li>
+            <li>Python</li>
+          </ul>
+        </div>
       </aside>
 
       <div class="main__div">
         <section id="about_me">
           <h2>About Me</h2>
-          <p>
+          <p class="about_me__p">
             I have a certification in Fullstack Development from the B.S. in
             mechanical engineering from the University of Arizona (ABET) with a
             minor in mathematics. At present I am employed with Raytheon
