Fixed contact me form

--- a/Pages/contact_me.html
+++ b/Pages/contact_me.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="../Styles/contact_me.css" />
   </head>
   <body>
-    <header>
-      <a href="../Index.html"
-        ><img class="logo" src="../Images/Logo.JPG" alt=""
+    <header class="navigationbar">
+      <a class="navigationbar__logoa" href="../Index.html"
+        ><img class="navigationbar__img" src="../Images/Logo.JPG" alt=""
       /></a>
-      <nav class="navigationbar">
+      <nav class="navigationbar__nav">
         <a class="tabs" href="#resume">Resume</a>
         <a class="tabs" href="#">Contact Me</a>
         <a class="tabs" href="../Index.html#work">Work</a>
