Fixed a bug with index CSS that still used uppercase I

--- a/Pages/contact_me.html
+++ b/Pages/contact_me.html
@@ -20,8 +20,8 @@
       <nav class="navigationbar__nav">
         <a class="tabs" href="#resume">Resume</a>
         <a class="tabs" href="#">Contact Me</a>
-        <a class="tabs" href="../Index.html#work">Work</a>
-        <a class="tabs" href="../Index.html#about_me">About Me</a>
+        <a class="tabs" href="../index.html#work">Work</a>
+        <a class="tabs" href="../index.html#about_me">About Me</a>
       </nav>
     </header>
     <div class="wrapper">
