--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"
     />
-    <link rel="stylesheet" href="./Styles/Index.css" />
+    <link rel="stylesheet" href="./Styles/index.css" />
   </head>
   <body>
     <header class="navigationbar">
