Fixed a bug with index CSS that still used uppercase I v2

--- a/Pages/contact_me.html
+++ b/Pages/contact_me.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="navigationbar">
-      <a class="navigationbar__logoa" href="../Index.html"
+      <a class="navigationbar__logoa" href="../index.html"
         ><img class="navigationbar__img" src="../Images/Logo.JPG" alt=""
       /></a>
       <nav class="navigationbar__nav">
