Completed Work section, added link to main app, and added footer links to additional profiles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./Styles/normalize.css" />
+    <script
+      src="https://kit.fontawesome.com/65eb5ab099.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"
@@ -78,75 +82,76 @@
         <section id="about_me">
           <h2>About Me</h2>
           <p class="about_me__p">
-            I have a certification in Fullstack Development from the B.S. in
-            mechanical engineering from the University of Arizona (ABET) with a
-            minor in mathematics. At present I am employed with Raytheon
-            Technologies and have worked other roles as a Jr. Mechanical
-            Engineer for SMW Manufacturing and GRG America. Also, three
-            internships as a data collection engineer at Case New Holland,
-            consulting engineer at Hofstadter Analytical services, and Jr.
-            design engineer at Watts Water Technologies. I am also proud of my
-            3.6 GPA B.S. in Mechanical Engineering as well as 7 years of real
-            world experience. I have found demonstrating engineering rigor to be
-            rewarding and aim to challenge myself with technical industry
-            innovation. See Resume for details. Thanks for reading!
+            I have a certification in Full stack Development and B.S. in
+            Mechanical Engineering from the University of Arizona (ABET) with a
+            minor in Mathematics. My current role is a mechanical engineer at a
+            reputable competitor in the missile defense industry, Raytheon
+            Technologies. I have worked other engineering roles and am proud of
+            my 3.6 GPA B.S. in Mechanical Engineering as well as 7 years of real
+            world experience. However, A change in life vision has led me to
+            shift careers in order to pursue my passion for West Coast Swing
+            Dance. In order to travel, compete, and gain recognition there is a
+            necessity for long periods on the road. I have found remote work as
+            a full stack developer meets these needs and satisfies my desire to
+            demonstrate technical rigor. This path has beene rewarding and I aim
+            to continue challenging myself with application development
+            innovation. Contact me for further inquiry and see resume for
+            details. I look forward to sharing how my skills may benfit you.
           </p>
         </section>
         <section id="work">
           <h2>Work</h2>
           <div class="gallery">
-            <img
-              class="gallery__image"
-              src="https://place-puppy.com/100x100"
-              alt=""
-            />
-            <img
-              class="gallery__image"
-              src="https://place-puppy.com/100x100"
-              alt=""
-            />
-            <img
-              class="gallery__image"
-              src="https://place-puppy.com/100x100"
-              alt=""
-            />
-            <img
-              class="gallery__image"
-              src="https://place-puppy.com/100x100"
-              alt=""
-            />
-            <img
-              class="gallery__image"
-              src="https://place-puppy.com/100x100"
-              alt=""
-            />
-            <img
-              class="gallery__image"
-              src="https://place-puppy.com/100x100"
-              alt=""
-            />
-            <img
-              class="gallery__image"
-              src="https://place-puppy.com/100x100"
-              alt=""
-            />
-            <img
-              class="gallery__image"
-              src="https://place-puppy.com/100x100"
-              alt=""
-            />
-            <img
-              class="gallery__image"
-              src="https://place-puppy.com/100x100"
-              alt=""
-            />
+            <a
+              class="box box-one"
+              href="https://play.runescape.com/"
+              target="_blank"
+            >
+              <div>
+                <h2>The best app ever</h2>
+              </div>
+            </a>
+            <a class="box box-two" href="#">
+              <div>
+                <h2>Project B</h2>
+              </div>
+            </a>
+            <a class="box box-three" href="#">
+              <div>
+                <h2>Project C</h2>
+              </div>
+            </a>
+            <a class="box box-four" href="#">
+              <div>
+                <h2>Project D</h2>
+              </div>
+            </a>
+            <a class="box box-five" href="#">
+              <div>
+                <h2>Project E</h2>
+              </div>
+            </a>
           </div>
         </section>
       </div>
     </main>
     <footer>
-      <h3>ARIEL SCHWARTZ</h3>
-      <h3>PORTFOLIO</h3>
+      <h3>ARIEL SCHWARTZ PORTFOLIO</h3>
+      <a
+        class="linkedin"
+        href="https://www.linkedin.com/in/ariel--schwartz/"
+        target="_blank"
+      >
+        <i class="fa-brands fa-linkedin fa-xl"></i>
+      </a>
+      <a class="github" href="https://github.com/arishorts" target="_blank">
+        <i class="fa fa-github fa-xl"></i>
+      </a>
+      <a class="mail" href="mailto:arieljschwartz@gmail.com" target="_blank">
+        <i class="fa fa-envelope fa-xl"></i>
+      </a>
+
+      <br />
       <br />
       <h4>123 CANDY CANE LANE</h4>
       <h4>85704 TUCSON, AZ</h4>
