Add 980px max media query functionality

--- a/index.html
+++ b/index.html
@@ -82,21 +82,22 @@
         <section id="about_me">
           <h2>About Me</h2>
           <p class="about_me__p">
-            I have a certification in Full stack Development and B.S. in
-            Mechanical Engineering from the University of Arizona (ABET) with a
-            minor in Mathematics. My current role is a mechanical engineer at a
-            reputable competitor in the missile defense industry, Raytheon
-            Technologies. I have worked other engineering roles and am proud of
-            my 3.6 GPA B.S. in Mechanical Engineering as well as 7 years of real
-            world experience. However, A change in life vision has led me to
-            shift careers in order to pursue my passion for West Coast Swing
-            Dance. In order to travel, compete, and gain recognition there is a
-            necessity for long periods on the road. I have found remote work as
-            a full stack developer meets these needs and satisfies my desire to
-            demonstrate technical rigor. This path has beene rewarding and I aim
-            to continue challenging myself with application development
-            innovation. Contact me for further inquiry and see resume for
-            details. I look forward to sharing how my skills may benfit you.
+            I have a B.S. in Mechanical Engineering from the University of
+            Arizona (ABET) with a minor in Mathematics and am pursiing a
+            certification in Full stack Development. My current role is a
+            mechanical engineer at a reputable competitor in the missile defense
+            contractor industry, Raytheon Technologies. I have worked other
+            engineering roles and am proud of my 3.6 GPA B.S. in Mechanical
+            Engineering as well as 7 years of real world experience. However, a
+            change in life vision has led me to shift careers in order to pursue
+            my passion for West Coast Swing Dance. In order to travel, compete,
+            and gain recognition there is a necessity for long periods on the
+            road. I have found remote work as a full stack developer meets these
+            needs and satisfies my desire to demonstrate technical rigor. This
+            path has been rewarding and I aim to continue challenging myself
+            with application development innovation. Contact me for further
+            inquiry and see resume for details. I look forward to sharing how my
+            skills may benfit you.
           </p>
         </section>
         <section id="work">
