--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <div class="gallery">
             <a
               class="box box-one"
-              href="https://play.runescape.com/"
+              href="https://arishorts.github.io/Prework-Study-Guide/"
               target="_blank"
             >
               <div>
