Added projects to grid

--- a/index.html
+++ b/index.html
@@ -108,20 +108,23 @@
               href="https://arishorts.github.io/Prework-Study-Guide/"
               target="_blank"
             >
-              <div>
-                <h2>The best app ever</h2>
-              </div>
+              <div></div>
             </a>
-            <a class="box box-two" href="#">
-              <div>
-                <h2>Project B</h2>
-              </div>
+            <a
+              class="box box-two"
+              href="https://arishorts.github.io/multiplicationapp/"
+              target="_blank"
+            >
+              <div></div>
             </a>
-            <a class="box box-three" href="#">
-              <div>
-                <h2>Project C</h2>
-              </div>
+            <a
+              class="box box-three"
+              href="https://arishorts.github.io/clockapp/"
+              target="_blank"
+            >
+              <div></div>
             </a>
+
             <a class="box box-four" href="#">
               <div>
                 <h2>Project D</h2>
