Fixed a bug in the layout and removed navbar logo

--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
   </head>
   <body>
     <header class="navigationbar">
-      <a class="navigationbar__logoa" href="./index.html"
-        ><img class="navigationbar__img" src="./Images/Logo.JPG" alt=""
-      /></a>
-      <nav class="navigationbar__nav">
+      <nav class="navigationbar__nav container borderYtoX">
+        <a class="tabs" href="#top">Home</a>
         <a class="tabs" href="#resume">Resume</a>
         <a class="tabs" href="./Pages/contact_me.html">Contact Me</a>
         <a class="tabs" href="#about_me">About Me</a>
@@ -68,12 +66,13 @@
           </p>
         </div>
         <div class="skills">
-          <h2>Languages</h2>
+          <h2>Proficient Skills</h2>
           <ul>
-            <li>HTML</li>
-            <li>CSS</li>
+            <li>HTML/CSS</li>
             <li>Javascript</li>
             <li>Python</li>
+            <li>MATLAB</li>
+            <li>Version Control: Git</li>
           </ul>
         </div>
       </aside>
@@ -97,7 +96,7 @@
             path has been rewarding and I aim to continue challenging myself
             with application development innovation. Contact me for further
             inquiry and see resume for details. I look forward to sharing how my
-            skills may benfit you.
+            skills may benefit you.
           </p>
         </section>
         <section id="work">
