--- a/Pages/contact_me.html
+++ b/Pages/contact_me.html
@@ -14,10 +14,8 @@
   </head>
   <body>
     <header class="navigationbar">
-      <a class="navigationbar__logoa" href="../index.html"
-        ><img class="navigationbar__img" src="../Images/Logo.JPG" alt=""
-      /></a>
-      <nav class="navigationbar__nav">
+      <nav class="navigationbar__nav container borderYtoX">
+        <a class="tabs" href="../index.html#top">Home</a>
         <a class="tabs" href="#resume">Resume</a>
         <a class="tabs" href="#">Contact Me</a>
         <a class="tabs" href="../index.html#about_me">About Me</a>
@@ -35,19 +33,18 @@
             minlength="0"
             maxlength="40"
           />
-          <input
-            class="message"
-            type="text"
+          <textarea
+            type="message"
             name="text"
             placeholder="Write Here"
             minlength="0"
             maxlength="9999"
-          />
+          ></textarea>
         </div>
         <div class="form-group">
           <button type="button">Send Email</button>
         </div>
-        <p class="copyright">And you will hear back from me shortly</p>
+        <p class="copyright">And you will hear back shortly</p>
       </form>
     </div>
   </body>
