Added button ripple feature to work gallery

--- a/index.html
+++ b/index.html
@@ -103,36 +103,31 @@
           <h2>Work</h2>
           <div class="gallery">
             <a
-              class="box box-one"
+              class="box box-one btn1"
               href="https://arishorts.github.io/Prework-Study-Guide/"
               target="_blank"
             >
-              <div></div>
+              <span>Prework Study Guide</span>
             </a>
             <a
-              class="box box-two"
+              class="box box-two btn2"
               href="https://arishorts.github.io/multiplicationapp/"
               target="_blank"
             >
-              <div></div>
+              <span>* App</span>
             </a>
             <a
-              class="box box-three"
+              class="box box-three btn3"
               href="https://arishorts.github.io/clockapp/"
               target="_blank"
             >
-              <div></div>
+              <span>Digital Clock</span>
             </a>
-
-            <a class="box box-four" href="#">
-              <div>
-                <h2>Project D</h2>
-              </div>
+            <a class="box box-four btn4" href="#">
+              <span>Project 4</span>
             </a>
-            <a class="box box-five" href="#">
-              <div>
-                <h2>Project E</h2>
-              </div>
+            <a class="box box-five btn5" href="#">
+              <span>Project 5</span>
             </a>
           </div>
         </section>
@@ -162,5 +157,6 @@
       <h4>ARIELJSCHWARTZ@GMAIL.COM</h4>
       <h4>+1 (857)-327 3079</h4>
     </footer>
+    <script src="index.js"></script>
   </body>
 </html>
