Added two more projects to the Work section

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               href="https://arishorts.github.io/multiplicationapp/"
               target="_blank"
             >
-              <span>* App</span>
+              <span>Multiply App</span>
             </a>
             <a
               class="box box-three btn3"
@@ -123,11 +123,19 @@
             >
               <span>Digital Clock</span>
             </a>
-            <a class="box box-four btn4" href="#">
-              <span>Project 4</span>
+            <a
+              class="box box-four btn4"
+              href="https://arishorts.github.io/ripplebutton/"
+              target="_blank"
+            >
+              <span>Ripple Button</span>
             </a>
-            <a class="box box-five btn5" href="#">
-              <span>Project 5</span>
+            <a
+              class="box box-five btn5"
+              href="https://arishorts.github.io/charactercounter/"
+              target="_blank"
+            >
+              <span>Character Counter</span>
             </a>
           </div>
         </section>
