Added Heart Trail app to gallery

--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
             </a>
             <a
               class="box box-four btn4"
-              href="https://arishorts.github.io/ripplebutton/"
+              href="https://arishorts.github.io/heart-trail-setup/"
               target="_blank"
             >
-              <span>Ripple Button</span>
+              <span>Heart Trail</span>
             </a>
             <a
               class="box box-five btn5"
