Added MealMate to the portfolio and replaced Prework Study Guide

--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
           <div class="gallery">
             <a
               class="box box-one btn1"
-              href="https://arishorts.github.io/Prework-Study-Guide/"
+              href="https://arishorts.github.io/MealMate/"
               target="_blank"
             >
-              <span>Prework Study Guide</span>
+              <span>Meal Mate</span>
             </a>
             <a
               class="box box-two btn2"
